--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,12 +1,9 @@
-/* @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+  font-family: sans-serif;
+  background-color: #2c2f33;
 }
-
+/* 
 a,
 .green {
   text-decoration: none;
